@@ -11,6 +11,7 @@ qmsystem2 (0.0.11) unstable; urgency=low
    * Test each cabc mode separately
    * Fix cabc test
    * Fixes: NB#211192 - QmLocks makes blocking dbus calls
+   * Remove sysfs-watcher
 
    [Tapio Rantala]
    * Proper package config file format
